--- a/README
+++ b/README
@@ -1,3 +1,10 @@
-El blog con web2py está en:
+El blog con web2py estába en:
 
 http://blog-j3nnn1.dotcloud.com/
+
+
+
+#desactualizado.
+#cosas usando python y web2py
+
+
